Fix firefox messages overlap

--- a/css/chat.css
+++ b/css/chat.css
@@ -187,7 +187,7 @@ header
 	padding:5px;
 	padding-left:175px;
 	padding-top:100px;
-	padding-bottom:20px;
+	/*padding-bottom:20px;*/
 	height:90%;
 	overflow:scroll;
 	overflow-x:hidden;
@@ -212,6 +212,10 @@ header
 	border-bottom:1px solid #ccc;
 	border-left:1px solid #ccc;
 	border-right:1px solid #ccc;
+}
+.message-block:last-child
+{
+	margin-bottom:20px;
 }
 
 .message-body 
